fix bug not allowing dropdown align well

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -20,6 +20,10 @@ body {
   display: none;
 }
 
+.dropdown-menu {
+  width: 190px;
+}
+
 .nav-buttons {
   display: inline;
 }
